--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,6 @@ web_modules/
 # Output of 'npm pack'
 *.tgz
 
-# Yarn Integrity file
-.yarn-integrity
-
 # dotenv environment variables file
 .env
 .env.test
@@ -50,14 +47,6 @@ web_modules/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
-
-# Next.js build output
-.next
-out
-
-# Nuxt.js build / generate output
-.nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -71,9 +60,6 @@ dist
 # Serverless directories
 .serverless/
 
-# FuseBox cache
-.fusebox/
-
 # DynamoDB Local files
 .dynamodb/
 
@@ -83,9 +69,5 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
+# General
+*.DS_Store
