--- a/aws_utils/package.json
+++ b/aws_utils/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "upload-cft": "ts-node -r dotenv/config upload.ts",
-    "test": "jest"
+    "test": "jest --verbose",
+    "coverage": "jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
