--- a/aws_utils/package.json
+++ b/aws_utils/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
+    "aws-sdk-client-mock": "^0.2.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
